Add FontAwesome icon set

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,8 @@
 		{% block css %}
 			<!-- Bootstrap v3 via SASS-->
 			<link rel="stylesheet" type="text/x-scss" href="{% static 'css/site.scss' %}">
+			<!-- FontAwesome v4 Icon set -->
+			<link rel="stylesheet" type="text/css" href="{% static 'css/vendors/font-awesome.min.css' %}" media="all">
 		{% endblock css %}
 	{% endcompress css %}
 	{% block extra_css %}{% endblock extra_css %}
