Expose django admin link to frontend

--- a/src/templates/dashboard/_includes/tabs.html
+++ b/src/templates/dashboard/_includes/tabs.html
@@ -2,4 +2,7 @@
 	class="dashboard__tab__item {% if active == 'home' %}active{% endif %}">Home</a>
 <a href="{% url 'dashboard_profile' %}"
 	class="dashboard__tab__item {% if active == 'profile' %}active{% endif %}">Profile Update</a>
-<a href="#" class="dashboard__tab__item">(Empty)</a>
+{% if user.is_staff %}
+<a href="{% url 'dashboard_admin' %}"
+	 class="dashboard__tab__item {% if active == 'admin' %}active{% endif %}">Admin</a>
+{% endif %}
