Define condition 0 as (All)
So condition's _uid starts by 1

--- a/src/templates/experiments/new.html
+++ b/src/templates/experiments/new.html
@@ -101,6 +101,7 @@
 							v-on:change="updateSourceCondition(sourcesBySample.sample, sourcesBySample.condition)"
 							class="form-control"
 					>
+						<option value="0">(All)</option>
 						<option v-for="condition in conditions" v-bind:value="condition._uid">
 							{{ condition.label }}
 						</option>
