Use experiment for setting analysis' condition and data sources.
Also, rename all Pipeline to Analysis to reduce complexity.

--- a/src/templates/pipelines/rna_seq.html
+++ b/src/templates/pipelines/rna_seq.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags static %}
 
 {% block title %}New RNA-Seq Analysis{% endblock %}
 
+{% block extra_css %}
+	{{ block.super }}
+	{{ form.media.css }}
+{% endblock extra_css %}
+
 {% block content %}
 	<h2>New RNA-Seq Analysis</h2>
-
 	{% crispy form %}
 {% endblock %}
+
+{% block extra_js %}
+	{{ block.super }}
+	<script src="{% static 'js/vendors/vue.min.js' %}"></script>
+	{{ form.media.js }}
+{% endblock extra_js %}
