Add condition sample preview block

--- a/src/static/css/pages/_experiements.scss
+++ b/src/static/css/pages/_experiements.scss
@@ -1,3 +1,9 @@
 .source-label:not(:first-of-type)::before {
     content: ", ";
 }
+
+.condition-group {
+    .samples {
+        margin-left: 0.75em;
+    }
+}
