Add file label icon

--- a/src/templates/experiments/new.html
+++ b/src/templates/experiments/new.html
@@ -122,7 +122,7 @@
 				</td>
 				<td>
 					<span v-for="file in sourcesBySample.files" class="source-label">
-						{{ file.label }}
+						<i class="fa fa-file-o" aria-hidden="true"></i> {{ file.label }}
 					</span>
 				</td>
 			</tr>
