Embed Font Awesome SASS and font files

--- a/src/static/css/_variables.scss
+++ b/src/static/css/_variables.scss
@@ -2,3 +2,6 @@ $footer-height: 60px;
 $footer-height-larger: $footer-height * 1.5;
 $footer-gap: 30px;
 $footer-gap-larger: $footer-gap * 1.5;
+
+// Font-Awesome settings
+$fa-font-path: "/static/fonts";
