--- a/src/static/css/site.scss
+++ b/src/static/css/site.scss
@@ -23,6 +23,9 @@
 // Import Bootstrap for Sass
 @import "bootstrap";
 
+// Import Font-Awesome Icon sets
+@import "font-awesome";
+
 // Import site-wide mixins
 // @import "mixins";
 
