Add experiment list view

--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -28,6 +28,9 @@
 							Experiments<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
+							<li>
+								<a href="{% url 'list_experiment' %}">List all</a>
+							</li>
 							<li><a href="{% url 'new_experiment' %}">New</a></li>
 						</ul>
 					</li><!-- /.dropdown -->
