Add experiment detail view

--- a/src/static/css/pages/_experiements.scss
+++ b/src/static/css/pages/_experiements.scss
@@ -7,3 +7,13 @@
         margin-left: 0.75em;
     }
 }
+
+.markdown-readonly {
+    > textarea {
+        display: none;
+    }
+    blockquote {
+        font-size: 1em;
+        color: $gray;
+    }
+}
