--- a/src/templates/pipelines/rna_seq.html
+++ b/src/templates/pipelines/rna_seq.html
@@ -1,6 +1,6 @@
 {% extends 'analyses/new_analysis_base.html' %}
 
-{% load crispy_forms_tags static %}
+{% load crispy_forms_tags static compress %}
 
 {% block title %}New RNA-Seq Analysis{% endblock %}
 
@@ -13,3 +13,22 @@
 	{{ block.super }}
 	<script src="{% static 'js/vendors/vue.min.js' %}"></script>
 {% endblock extra_js %}
+
+{% block scripts %}
+	{% url 'ajax_experiment_info' as ajax_experiment_info_url %}
+	{% compress js %}
+	<script>
+		$("#id_experiment").change(function(event) {
+			if (this.selectedIndex === 0) return false;
+			var experimentPk = this.options[this.selectedIndex].value;
+			$.post(
+					"{{ ajax_experiment_info_url }}",
+					{"experiment_pk": experimentPk},
+					function (data) {
+						console.log(data);
+					}
+			);
+		})
+	</script>
+	{% endcompress %}
+{% endblock scripts %}
