--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,9 @@
 		{% endblock messages %}
 		{% block content %}It works!{% endblock %}
 	</div>
+	{% block footer %}
 	{% include '_includes/footer.html' %}
+	{% endblock footer %}
 {% endblock %}
 {% block js %}
 	<!-- jQuery v2 -->
