--- a/src/templates/analyses/new_analysis_base.html
+++ b/src/templates/analyses/new_analysis_base.html
@@ -35,7 +35,7 @@
 	</template>
 	{% endverbatim %}
 	{% endblock vue_component_template %}
-	{{ super }}
+	{{ block.super }}
 {% endblock footer %}
 
 {% block extra_js %}
