--- a/src/templates/analyses/base.html
+++ b/src/templates/analyses/base.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block nav %}
-{% include '_includes/nav.html' with active='new_analysis' %}
+{% include '_includes/nav.html' with active='analysis' %}
 {% endblock nav %}
